--- a/AlwaysForward/AlwaysForward/Views/Activity/Index.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Activity/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@model IEnumerable<Activity>
 
-<h2>Activities</h2>
+<h2>Daily Tasks</h2>
+
+<div style="display: block">
+    <a href="/Activity/InsertActivity/">Add a new Task?</a>
+</div>
 
 <table class="table">
     <tr>       
