--- a/AlwaysForward/AlwaysForward/Views/Home/Index.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Home/Index.cshtml
@@ -1,8 +1,31 @@
 ﻿@{
-    ViewData["Title"] = "Always Forward";
+    ViewData["Title"] = "Always Forward | Habit Tracker";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<head>
+    <link rel="stylesheet" href="./index.css" />
+</head>
+<div class="nav container">
+    <div class="nav-wrapper">
+        <ul class="nav-options">
+            <li>
+               
+            </li>
+        </ul>
+    </div>
 </div>
+
+<body class="page">
+    <div class="landing">
+        <div class="home-wrapper">
+            <div class="text-center">
+                <h3 class="display-4">
+                    A simple habit tracker application
+                    to help you become the best version of yourself.
+                </h3>
+                <div class="buttons-mylist">
+                    <a class="button" href="/Activity/Index/">Forward!</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
