--- a/AlwaysForward/AlwaysForward/Views/Home/Index.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Home/Index.cshtml
@@ -14,12 +14,12 @@
     <div class="landing">
         <div class="home-wrapper">
             <div class="text-center">
-                <h3 class="display-4">
+                <h3 class="display-body">
                     A simple habit tracker application
                     to help you become the best version of yourself.
                 </h3>
                 <div class="buttons-mylist">
-                    <a class="button" href="/Activity/Index/">Forward!</a>
+                    <a class="buttontext" href="/Activity/Index/">Forward!</a>
                 </div>
             </div>
         </div>
