--- a/AlwaysForward/AlwaysForward/wwwroot/css/site.css
+++ b/AlwaysForward/AlwaysForward/wwwroot/css/site.css
@@ -1,5 +1,23 @@
+nav {
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+}
+.navbar-brand{
+    font-size:20px;
+    font-weight:100;
+}
+.nav-item{
+    font-size:20px;
+    font-weight:100;
+    text-align:left;
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+}
+
 html {
-  font-size: 14px;
+  font-size: 28px;
 }
 
 @media (min-width: 768px) {
@@ -16,3 +34,38 @@ html {
 body {
   margin-bottom: 60px;
 }
+.display-body{
+    font-size: 22px;
+    text-align:center;
+}
+.home-wrapper{
+    padding-top:50px;
+    padding-bottom:50px;
+   
+}
+.buttons-mylist {
+    vertical-align:middle;
+    text-align:center;
+    border: none;
+    background-color: #008CBA;
+    padding: 8px 12px;
+    display: inline-flex;
+    margin: 4px 2px;
+    border-radius: 8px;
+    transition:all 0.5s;
+    cursor:pointer;
+}
+.buttons-mylist:hover{
+    background-color:deepskyblue;
+}
+.buttontext {
+    text-decoration: none;
+    font-size: 20px;
+    color:black;
+    outline-style:none;
+
+}
+.buttontext:hover{
+    outline:none;
+}
+
