--- a/AlwaysForward/AlwaysForward/wwwroot/css/activities.css
+++ b/AlwaysForward/AlwaysForward/wwwroot/css/activities.css
@@ -74,3 +74,18 @@ td:hover{
 .buttontext:hover{
     outline:none;
 }
+.buttons-update {
+    text-align: center;
+    padding: 8px 12px;
+    background-color: #008CBA;
+    border-radius: 12px;
+    display: inline-block;
+    transition: all 0.5s;
+}
+.buttons-update:hover {
+    background-color: deepskyblue;
+}
+
+.description-field{
+    
+}
