home, todo index views

--- a/AlwaysForward/AlwaysForward/Views/Home/Index.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Home/Index.cshtml
@@ -1,14 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Always Forward | Habit Tracker";
+    Layout = "../Shared/_Layout.cshtml";
 }
-
-<div class="nav container">
-    
-        <ul class="nav-options">
-            
-        </ul>
-
-</div>
 
 <body class="page">
     <div class="landing">
@@ -18,9 +11,6 @@
                     A simple habit tracker application
                     to help you become the best version of yourself.
                 </h3>
-                <div class="buttons-mylist">
-                    <a class="buttontext" href="/Activity/Index/">Forward!</a>
-                </div>
             </div>
         </div>
     </div>
