--- a/AlwaysForward/AlwaysForward/wwwroot/css/activities.css
+++ b/AlwaysForward/AlwaysForward/wwwroot/css/activities.css
@@ -42,7 +42,7 @@ th{
     padding-left:20px;
     font-size:16px;
     font-weight:100;
-    text-align:left;
+    text-align:center;
     border-bottom:thin;
     border-color:darkslategrey;
 }
