--- a/AlwaysForward/AlwaysForward/Views/Shared/_Layout.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link href="~/css/main.css" rel="stylesheet" />
     <noscript><link href="~/css/noscript.css" rel="stylesheet" /></noscript>
 </head>
+
+
 <body class="is-preload">
 	<div id="wrapper" class="fade-in">
 
@@ -27,7 +29,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Always Forward</a>
+			<a href="../Views/Home/Index.cshtml" class="logo">Always Forward</a>
 		</header>
 
 		<!-- Nav -->
