--- a/AlwaysForward/AlwaysForward/Views/Activity/Completed.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Activity/Completed.cshtml
@@ -4,56 +4,65 @@
 }
 
 @model IEnumerable<Activity>
+<div id="main">
 
-<table class="task-table">
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Category</th>
-        <th></th>
-    </tr>
+    <article class="post featured">
+        <header>
+            <h1>Completed Tasks</h1>
+            <p>"Winning!"<i>-Charlie Sheen, 2011</i></p>
+        </header>
 
-    @foreach (var activity in @Model)
-    {
-        <tr>
+        <div class="table-wrapper">
+            <table class="alt">
+                <tr>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Category</th>
+                    <th></th>
+                </tr>
 
-            <td><a href=/Activity/ViewActivity/@activity.ActivityID>@activity.Name</a></td>
-            <td>@activity.Description</td>
-            <td>
-                @switch (activity.CategoryID)
+                @foreach (var activity in @Model)
                 {
-                    case 1:
-                        activity.CategoryName = "Hygiene";
-                        break;
-                    case 2:
-                        activity.CategoryName = "Mental Health/Mindfulness";
-                        break;
-                    case 3:
-                        activity.CategoryName = "Physical Health/Fitness";
-                        break;
-                    case 4:
-                        activity.CategoryName = "Discipline";
-                        break;
-                    case 5:
-                        activity.CategoryName = "Learning/Education";
-                        break;
-                    case 6:
-                        activity.CategoryName = "Social";
-                        break;
-                    case 7:
-                        activity.CategoryName = "Financial";
-                        break;
-                    case 8:
-                        activity.CategoryName = "Spiritual";
-                        break;
-                    default:
-                        activity.CategoryName = "Undefined";
-                        break;
+                    <tr>
+                        <td>@activity.Name</td>
+                        <td>@activity.Description</td>
+                        <td>
+                            @switch (activity.CategoryID)
+                            {
+                                case 1:
+                                    activity.CategoryName = "Hygiene";
+                                    break;
+                                case 2:
+                                    activity.CategoryName = "Mental Health/Mindfulness";
+                                    break;
+                                case 3:
+                                    activity.CategoryName = "Physical Health/Fitness";
+                                    break;
+                                case 4:
+                                    activity.CategoryName = "Discipline";
+                                    break;
+                                case 5:
+                                    activity.CategoryName = "Learning/Education";
+                                    break;
+                                case 6:
+                                    activity.CategoryName = "Social";
+                                    break;
+                                case 7:
+                                    activity.CategoryName = "Financial";
+                                    break;
+                                case 8:
+                                    activity.CategoryName = "Spiritual";
+                                    break;
+                                default:
+                                    activity.CategoryName = "Undefined";
+                                    break;
+                            }
+                            @activity.CategoryName
+                        </td>
+
+                    </tr>
                 }
-                @activity.CategoryName
-            </td>
-
-        </tr>
-    }
-</table>
-
+            </table>
+        </div>
+    </article>
+</div>
