--- a/AlwaysForward/AlwaysForward/Views/Activity/InsertActivity.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Activity/InsertActivity.cshtml
@@ -1,33 +1,43 @@
 ﻿
 @{
     ViewData["Title"] = "Add a new Task!";
+    Layout = "../Shared/_OtherLayout.cshtml";
 }
-
-
 @model Activity
 
-<h2>Let`s add a new task. The more the merrier!</h2>
 
-@using (Html.BeginForm("InsertActivityToDatabase", "Activity", "Post"))
-{
-    <input asp-for="ActivityID" type="hidden" value="" />
+<body class="is-preload">
+    <div id="wrapper">
+        <div id="main">
+            <h2>Let's add a new task. The more the merrier!</h2>
 
-    <label asp-for="Name" class="control-label">Name</label>
-    <input type="text" name="Name" class="form-control" value="" />
-
-    <label asp-for="Description" class="control-label">Description</label>
-    <input type="text" step="0.01" name="Description" class="form-control" />
-
-    <div class="form-group">
-        <label for="">Select a Category</label>
-        <select class="form-control" name="CategoryID" value="">
-            @foreach (var cat in Model.Categories)
+            @using (Html.BeginForm("InsertActivityToDatabase", "Activity", "Post"))
             {
-                <option value="@cat.CategoryID">@cat.CategoryID @cat.Name</option>
+                <input asp-for="ActivityID" type="hidden" value="" />
+
+                <label asp-for="Name" class="col-6 col-12-xsmall">Name</label>
+                <input type="text" name="Name" class="form-control" value="" />
+
+                <label asp-for="Description" class="col-12">Description</label>
+                <input type="text" step="0.01" name="Description" class="form-control" />
+
+                <div class="col-12">
+                    <label for="">Select a Category</label>
+                    <select class="form-control" name="CategoryID" value="">
+                        @foreach (var cat in Model.Categories)
+                        {
+                            <option value="@cat.CategoryID">@cat.CategoryID @cat.Name</option>
+                        }
+                    </select>
+                </div>
+                <div class="col-12">
+                    <ul class="actions">
+                        <li><input type="submit" value="Add Task" class="primary" /></li>
+                        <li><input type="reset" value="Reset" /></li>
+                    </ul>
+                </div>
             }
-        </select>
+
+        </div>
     </div>
-
-    <input type="submit" value="Add Task" class="btn btn-primary" />
-}
-
+</body>
