fixed logo link in layout

--- a/AlwaysForward/AlwaysForward/Views/Shared/_OtherLayout.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Shared/_OtherLayout.cshtml
@@ -10,7 +10,7 @@
 <body class="is-preload">
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Always Forward</a>
+			<a asp-area="" asp-controller="Activity" asp-action="Index" class="logo">Always Forward</a>
 		</header>
 
 		<!-- Nav -->
