changes to home view

--- a/AlwaysForward/AlwaysForward/Views/Activity/Completed.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Activity/Completed.cshtml
@@ -53,13 +53,15 @@
                                 case 8:
                                     activity.CategoryName = "Spiritual";
                                     break;
+                                case 9:
+                                    activity.CategoryName = "Other";
+                                    break;
                                 default:
                                     activity.CategoryName = "Undefined";
                                     break;
                             }
                             @activity.CategoryName
                         </td>
-
                     </tr>
                 }
             </table>
