--- a/AlwaysForward/AlwaysForward/Views/Activity/Index.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Activity/Index.cshtml
@@ -59,6 +59,9 @@
                             case 8:
                                 activity.CategoryName = "Spiritual";
                                 break;
+                            case 9:
+                                activity.CategoryName = "Other";
+                                break;
                             default:
                                 activity.CategoryName = "Undefined";
                                 break;
