--- a/AlwaysForward/AlwaysForward/Views/Activity/ViewActivity.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Activity/ViewActivity.cshtml
@@ -45,6 +45,9 @@
                 case 8:
                     Model.CategoryName = "Spiritual";
                     break;
+                case 9:
+                    Model.CategoryName = "Other";
+                    break;
                 default:
                     Model.CategoryName = "Undefined";
                     break;
