--- a/AlwaysForward/AlwaysForward/Views/Home/Index.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Home/Index.cshtml
@@ -6,11 +6,27 @@
 <body class="page">
     <div class="landing">
         <div class="home-wrapper">
-            <div class="text-center">
-                <h3 class="display-body">
-                    A simple habit tracker application
-                    to help you become the best version of yourself.
-                </h3>
+            <div id="main" class="text-center">
+                <article>
+                    <header>
+                        <span class="date">3 November, 2022</span>
+                        <h2>What is it?</h2>
+                    </header>
+                        <p>Always Forward was actually the second name I came up for this project, after some weird Latin phrase that I cannot remember at the time of writing this but wanted to use in order to sound cool.<br />
+                        This is meant to be a to-do list application that I would use, with features from various applications I have used over the years. <br />
+                        </p>
+                        <p>I created this project using .NET 6.0 for my final project at the TrueCoders software engineering bootcamp.
+                        Right now, this site contains basic CRUD functionality and writes to a local SQL database. You can view the source code for this project via the GitHub icons.<br />
+                        </p>
+                            Some of my plans/ideas for the future of this project include:
+                            <ul>
+                                <li>user login/OAuth integration as well as Apple/Google/Meta sign-in using their API</li>
+                                <li>daily affirmations/therapeutic themes within the app</li>
+                                <li>Github-esque heatmap of daily activity</li>
+                                <li>this week, month, etc progress views</li>
+                                <li>streaks for completing tasks multiple times in a row</li>
+                            </ul>
+                </article>
             </div>
         </div>
     </div>
