--- a/AlwaysForward/AlwaysForward/Views/Shared/_OtherLayout.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Shared/_OtherLayout.cshtml
@@ -21,7 +21,8 @@
 				<li><a asp-area="" asp-controller="Activity" asp-action="Completed">Completed</a></li>
 			</ul>
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+				@*the 'noopener and noreferrer' elements help prevent tabnabbing*@
+			<li><a href="https://github.com/cmreavis/alwaysForward" target="_blank" rel="noreferrer noopener" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 			</ul>
 		</nav>
 		
@@ -60,7 +61,7 @@
 					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/cmreavis/alwaysForward" target="_blank" rel="noreferrer noopener" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 			</section>
 		</section>
@@ -68,7 +69,7 @@
 
 	<!-- Copyright -->
 	<div id="copyright">
-		<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+		<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 	</div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
