change to home page

--- a/AlwaysForward/AlwaysForward/Views/Home/Index.cshtml
+++ b/AlwaysForward/AlwaysForward/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                         This is meant to be a to-do list application that I would use, with features from various applications I have used over the years. <br />
                         </p>
                         <p>I created this project using .NET 6.0 for my final project at the TrueCoders software engineering bootcamp.
-                        Right now, this site contains basic CRUD functionality and writes to a local SQL database. You can view the source code for this project via the GitHub icons.<br />
+                        Right now, this site contains basic CRUD functionality and writes to an Azure SQL database. You can view the source code for this project via the GitHub icons.<br />
                         </p>
                             Some of my plans/ideas for the future of this project include:
                             <ul>
